backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: tier-app
    tier: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tier-app
      tier: backend
  template:
    metadata:
      labels:
        app: tier-app
        tier: backend
    spec:
      containers:
      - name: backend
        image: tier-app-backend:latest
        imagePullPolicy: Never  # ⬅️ ضيفي هذا السطر
        ports:
        - containerPort: 5000
