db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-deployment
  labels:
    app: tier-app
    tier: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tier-app
      tier: database
  template:
    metadata:
      labels:
        app: tier-app
        tier: database
    spec:
      containers:
      - name: postgres
        image: postgres:16
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: db-data
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: db-data
        persistentVolumeClaim:
          claimName: db-pvc
