frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: tier-app
    tier: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tier-app
      tier: frontend
  template:
    metadata:
      labels:
        app: tier-app
        tier: frontend
    spec:
      containers:
      - name: frontend
        image: tier-app-frontend:latest
        imagePullPolicy: Never  # ⬅️ ضيفي هذا السطر
        ports:
        - containerPort: 3000
