working-simple-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: tier-app
    tier: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tier-app
      tier: backend
  template:
    metadata:
      labels:
        app: tier-app
        tier: backend
    spec:
      containers:
      - name: backend
        image: python:3.11-slim
        command: ["/bin/sh", "-c"]
        args:
          - |
            [...]
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: tier-app
    tier: backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
